spacing fixed

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ h5{
 .mockup-image{
     position: absolute;
     top: -100px;
-    right: -400px;
+    right: -230px;
 }
 
 .about{
@@ -209,7 +209,7 @@ footer p{
 
 
     .first{
-        margin-top: 350px;
+        margin-top: 200px;
     }
 
     .first h1{
